Styles baby-steps

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,28 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <section id="wrapper" class="clearfix">
+      <nav id="games-list" class="clearfix">
+        <ul>
+          <li><a href="#" class="game-link">JS::Robot</a></li>
+          <li><a href="#" class="game-link">JS::BlackBox</a></li>
+          <li><a href="#" class="game-link selected">JS::Regex</a></li>
+        </ul>
+      </nav>
+      <header class="clearfix">
+        <h1>RG::"Regex Game"</h1>
+        <nav>
+          <ul class="header-navigation">
+            <li><a ng-href="#">About</a></li>
+            <li><a ng-href="#">Comments</a></li>
+          </ul>
+        </nav>
+      </header>
+
+    </section>
+
+
+
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
