Add golf controller

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/golf.js"></script>
+        <script src="scripts/filters/reduceleveldata.js"></script>
         <!-- endbuild -->
 </body>
 </html>
