--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,13 @@
     <section id="wrapper" class="clearfix">
       <nav id="games-list" class="clearfix">
         <ul>
-          <li><a href="#" class="game-link">JS::Robot</a></li>
-          <li><a href="#" class="game-link">JS::BlackBox</a></li>
-          <li><a href="#" class="game-link selected">JS::Regex</a></li>
+          <li><a href="#" class="game-link">JS:Robot</a></li>
+          <li><a href="#" class="game-link">JS:BlackBox</a></li>
+          <li><a href="#" class="game-link selected">JS:Regex</a></li>
         </ul>
       </nav>
-      <header class="clearfix">
-        <h1>RG::"Regex Game"</h1>
+      <header class="page clearfix">
+        <h1>RG:"Regex Game"</h1>
         <nav>
           <ul class="header-navigation">
             <li><a ng-href="#">About</a></li>
@@ -37,28 +37,9 @@
           </ul>
         </nav>
       </header>
-
+      <main ng-view="" class="clearfix"></main>
+      <footer></footer>
     </section>
-
-
-
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">jsgame</h3>
-      </div>
-
-      <div ng-view=""></div>
-
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -95,7 +76,6 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/golf.js"></script>
-        <script src="scripts/filters/reduceleveldata.js"></script>
         <!-- endbuild -->
 </body>
 </html>
