Add levels service

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/golf.js"></script>
+        <script src="scripts/services/levels.js"></script>
         <!-- endbuild -->
 </body>
 </html>
