--- a/app/index.html
+++ b/app/index.html
@@ -77,57 +77,8 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/golf.js"></script>
         <script src="scripts/services/levels.js"></script>
+        <script src="scripts/directives/levelselector.js"></script>
         <!-- endbuild -->
     
-<script>
-var CanvasBuild  = {
-    build : function(obj){
-        var corners = 6;
-        var cnv = obj.getContext('2d');
-        cnv.beginPath();
-        var oW = obj.width, oH = obj.height, radius = obj.width/2 - 5, y0 = obj.width/2, x0 = obj.width/2;
-        console.log(oW);
-        console.log(oH);
-        //Begin
-        cnv.moveTo(x0, y0);
-        var  da = 360/corners, a= 0, path = [];
-
-        for (i =0; i < corners; i++){
-            var temp_x = (x0+Math.round(radius*Math.cos(a*Math.PI/180)));
-            var temp_y = (y0-Math.round(radius*Math.sin(a*Math.PI/180)));
-            path.push([temp_x,temp_y])
-            //console.log(path);
-            if (i == 0) {
-                cnv.moveTo(path[i][0], path[i][1]);
-            } else {
-                cnv.lineTo(path[i][0], path[i][1]);
-            }
-            a = a + da;
-        }
-            cnv.lineTo(path[0][0], path[0][1]);
-          // complete custom shape
-          cnv.closePath();
-          cnv.lineWidth = 2;
-          cnv.strokeStyle = 'green';
-          cnv.fill();
-          cnv.stroke();
-        return true;
-    }
-}
-
-setTimeout(function(){
-  var canvas = document.getElementsByClassName('ll-canvas');
-  console.log(canvas);
-
-  for (k = 0, len = canvas.length; k<len; k++){
-      CanvasBuild.build(canvas[k]);
-  }
-
-}, 500);
-
-
-
-</script>
-
 </body>
 </html>
