Add Crosser level type

--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,7 @@
         <script src="scripts/controllers/golf.js"></script>
         <script src="scripts/services/levels.js"></script>
         <script src="scripts/directives/levelselector.js"></script>
+        <script src="scripts/controllers/crosser.js"></script>
         <!-- endbuild -->
     
 </body>
