--- a/index.html
+++ b/index.html
@@ -1,85 +1,11 @@
-<!doctype html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body ng-app="jsgameApp">
-    <!--[if lt IE 7]>
+<!doctype html> <html class="no-js"> <head> <meta charset="utf-8"> <title></title> <meta name="description" content=""> <meta name="viewport" content="width=device-width"> <!-- Place favicon.ico and apple-touch-icon.png in the root directory --> <link rel="stylesheet" href="styles/main.c13a6e37.css">  <body ng-app="jsgameApp"> <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <!-- Add your site or application content here -->
-    <section id="wrapper" class="clearfix">
-      <nav id="games-list" class="clearfix">
-        <ul>
-          <li><a href="http://jsrobot.tk" class="game-link">JS:Robot</a></li>
-          <li><a href="http://jsblackbox.tk" class="game-link">JS:BlackBox</a></li>
-          <li><a href="#" class="game-link selected">JS:Regex</a></li>
-        </ul>
-      </nav>
-      <header class="page clearfix">
-        <h1>RG:"Regex Game"</h1>
-        <nav>
-          <ul class="header-navigation">
-            <li><a ng-href="#">About</a></li>
-            <li><a ng-href="#">Comments</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main ng-view="" class="clearfix"></main>
-      <footer></footer>
-    </section>
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    <![endif]--> <!-- Add your site or application content here --> <section id="wrapper" class="clearfix"> <nav id="games-list" class="clearfix"> <ul> <li><a href="http://jsrobot.tk" class="game-link">JS:Robot</a></li> <li><a href="http://jsblackbox.tk" class="game-link">JS:BlackBox</a></li> <li><a href="#" class="game-link selected">JS:Regex</a></li> </ul> </nav> <header class="page clearfix"> <h1>RG:"Regex Game"</h1> <nav> <ul class="header-navigation"> <li><a ng-href="#">About</a></li> <li><a ng-href="#">Comments</a></li> </ul> </nav> </header> <main ng-view="" class="clearfix"></main> <footer></footer> </section> <!-- Google Analytics: change UA-XXXXX-X to be your site's ID --> <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
-    <!-- build:js(.) scripts/oldieshim.js -->
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]-->
-    <!-- endbuild -->
-
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/json3/lib/json3.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/golf.js"></script>
-        <script src="scripts/services/levels.js"></script>
-        <script src="scripts/directives/levelselector.js"></script>
-        <script src="scripts/controllers/crosser.js"></script>
-        <!-- endbuild -->
-    
-</body>
-</html>
+       ga('send', 'pageview');</script> <!--[if lt IE 9]>
+    <script src="scripts/oldieshim.ff90b0fb.js"></script>
+    <![endif]--> <script src="scripts/vendor.212c4171.js"></script> <script src="scripts/scripts.eb418f77.js"></script>  
